2004-07-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.c (StartupStuff):
	do not ungrab the pointer while the startup functions execute
	(Done):
	ungrab the pointer only after executing the RestartFunction or
	ExitFunciton.  Otherwise these functions may not be executed if some
	other application grabs the pointer.

	* fvwm/fvwm.h:
	* fvwm/conditional.c (CreateConditionMask):
	renamed CurrentGlobbalPageAnyDesk to CurrentGlobalPageAnyDesk
	new condition AnyScreen

	* libs/Bindings.c:
	* fvwm/builtins.c (__fake_event):
	* fvwm/bindings.c (ParseBinding):
	removed C++ comments

2004-07-15  Scott Smedley  <scottie7@tpg.com.au>

	* NEWS:
	New options for FvwmButtons module.

2004-07-12  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.1.in:
	use commas between conditions

2004-07-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (CMD_Wait):
	ignore MapNotify reported to any window except the root window

	* fvwm/module_interface.c (CONFIGARGS):
	correct number of CONFIGARGS arguments

	* libs/vpacket.h (ConfigWinPacket):
	frame_x and frame_y are signed

2004-07-11  Scott Smedley  <scottie7@tpg.com.au>

	* fvwm/conditional.c:
	* fvwm/fvwm.h:
	* fvwm/fvwm.1.in:
	* AUTHORS:
	Committed patch by Norman Yarvin (with a few minor mods) to extend
	conditionals to handle multiple window names.

2004-07-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (CONFIGARGS):
	* libs/vpacket.h (ConfigWinPacket):
	put window_flags at end of structure

2004-07-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (CONFIGARGS):
	(OLDCONFIGARGS):
	(SETOLDFLAGS):
	(SendConfig):
	(BroadcastConfig):
	removed old module interface
	(CONFIGARGS):

	* libs/vpacket.h (ConfigWinPacket):
	64 bit fix

2004-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/execcontext.c (__exc_change_context):
	fixed handling of etrigger event, fixing a problem with PropertyNotify
	events during resizing and possibly other problems too
