@@ -44,7 +44,7 @@ typedef enum
 	/* C_ = 0x10000000, */
 	/* C_ = 0x20000000, */
 	/* C_ = 0x40000000, */
-	C_IGNORE_ALL = 0x80000000,
+	C_IGNORE_ALL = (int)0x80000000,
 	C_FRAME = (C_F_TOPLEFT|C_F_TOPRIGHT|C_F_BOTTOMLEFT|C_F_BOTTOMRIGHT),
 	C_SIDEBAR = (C_SB_LEFT|C_SB_RIGHT|C_SB_TOP|C_SB_BOTTOM),
 	C_RALL = (C_R1|C_R2|C_R3|C_R4|C_R5),
